--- a/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Fundamentals\ReservationTests.cs" />
     <Compile Include="Fundamentals\StackTests.cs" />
     <Compile Include="Mocking\OrderServiceTests.cs" />
+    <Compile Include="Mocking\ProductTests.cs" />
     <Compile Include="Mocking\VideoServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
