--- a/TestNinja/TestNinja.csproj
+++ b/TestNinja/TestNinja.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Mocking\EmployeeController.cs" />
     <Compile Include="Mocking\FileReader.cs" />
     <Compile Include="Mocking\InstallerHelper.cs" />
+    <Compile Include="Mocking\FileDownloader.cs" />
     <Compile Include="Mocking\OrderService.cs" />
     <Compile Include="Mocking\Product.cs" />
     <Compile Include="Mocking\VideoRepository.cs" />
