--- a/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Fundamentals\MathTests.cs" />
     <Compile Include="Fundamentals\ReservationTests.cs" />
     <Compile Include="Fundamentals\StackTests.cs" />
+    <Compile Include="Mocking\EmployeeControllerTests.cs" />
     <Compile Include="Mocking\InstallerHelperTests.cs" />
     <Compile Include="Mocking\OrderServiceTests.cs" />
     <Compile Include="Mocking\ProductTests.cs" />
